--- a/refresh.html
+++ b/refresh.html
@@ -17,14 +17,14 @@
         <thead>
             <tr id="header-row">
                 <th>Timestamp</th>
-                <th>Col1</th>
-                <th>Col2</th>
-                <th>Col3</th>
-                <th>Col4</th>
-                <th>Col5</th>
-                <th>Col6</th>
-                <th>Col7</th>
-                <th>Col8</th>
+                <th>UNIT1</th>
+                <th>UNIT2</th>
+                <th>UNIT3</th>
+                <th>UNIT4</th>
+                <th>UNIT5</th>
+                <th>UNIT6</th>
+                <th>UNIT7</th>
+                <th>UNIT8</th>
             </tr>
         </thead>
         <tbody>
